# lab_pa_test

pa2/: CMakeLists.txt  child_work.c  child_work.h  ipc.c  pa23.c  parent_work.c  parent_work.h  pipes_const.c  pipes_const.h  time_work.c  time_work.h
